MODEXPW-452: minor fixes